Squishing a few bugs

--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -1,5 +1,7 @@
 @import 'shared';
 
+input.undisturbed { color: #888; }
+
 .form-errors {
   padding: 0.5em;
   margin-bottom: 1em;
